--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       staticColorPicker(picker, document.querySelectorAll("p")[1]);
     </script>
     <br />
-    <button type="button" onclick="getInputValue()" class="btn first" ;>
+    <button type="button" onclick="getInputValue()" class="clickButton" ;>
       sumbit
     </button>
 
