--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@
         top: 0 !important;
         box-shadow: none;
       }
-      
-  
 
-      
       .clickButton {
         margin: 10px auto 0;
         color: #000;
         border: 1px solid rgb(212, 213, 255);
-        border-radius: 5%;
+        border-radius: 8%;
         padding: 5px 10px;
         background-color: rgb(225, 225, 249);
       }
@@ -91,7 +88,7 @@
     </script>
     <br />
     <button type="button" onclick="getInputValue()" class="clickButton" ;>
-      sumbit
+      Sumbit
     </button>
 
     <script>
